resources/keb-observability/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keb-observability
  labels:
    app.kubernetes.io/name: keb-observability
spec:
  type: ClusterIP
  ports:
    - port: 4180
      targetPort: oauth2-proxy
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: keb-observability
